syntax = "proto3";

package qrpay.v1;

option go_package = "github.com/Xausdorf/qr-pay-hub/gen/pb;pb";

service PaymentProcessor {
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string idempotency_key = 1;
  string from_account_id = 2;
  string to_account_id = 3;
  int64 amount = 4;
}

message PaymentResponse {
  string transaction_id = 1;
  TransactionStatus status = 2;
  string error_message = 3;
}

enum TransactionStatus {
  TRANSACTION_STATUS_UNSPECIFIED = 0;
  TRANSACTION_STATUS_PENDING = 1;
  TRANSACTION_STATUS_SUCCESS = 2;
  TRANSACTION_STATUS_FAILED = 3;
}
